fix map on mobile

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   right: 0;
   font-size: 1.5rem;
   background-color:#254557;
-  margin: 0px;
+  margin: 0px 5px 0px 5px;
   padding: 25px 10px 15px 10px;
   z-index: 100;
 }
@@ -162,7 +162,7 @@ header > h3 {
 }
 
 .map {
-  height: 600px;
+  height: 620px;
   min-width: 50%;
   background-image: url("images/facmap.jpg");
   background-repeat: no-repeat;
@@ -201,7 +201,7 @@ input::placeholder, textarea::placeholder {
     box-sizing: border-box;
     font-size: 1em;
     margin: 5px auto 25px auto;
-    padding: 15px 20px 15px 20px;
+    padding: 12px 15px 12px 15px;
     border: none;
   }
 
@@ -261,10 +261,11 @@ footer > h5 {
   }
   .map {
     height: 250px;
+    width: 100%;
   }
   .contact-flex-container {
-    flex-direction: column;
-    flex-wrap: wrap-reverse;
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
   }
   .contact-form {
     min-width: 350px;
@@ -287,6 +288,13 @@ footer > h5 {
   .nav-flex-container {
     font-size: 1rem;
     height: 70px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+  nav li {
+    padding-left: 2%;
+    padding-right: 2%;
   }
 }
 
